[Update] 카찹 관련 정보 업데이트

--- a/css/theme.css
+++ b/css/theme.css
@@ -184,3 +184,5 @@ footer { flex-shrink: 0; }
 .btn-3 { background-image: linear-gradient(to right, #84fab0 0%, #8fd3f4 51%, #84fab0 100%); }
 
 .backimg { height: 50rem; background-image: url(/assets/img/bg.png); background-repeat: no-repeat; background-position: top; background-size: cover; }
+
+.btn-google { background-image: linear-gradient(to right, #84fab0 0%, #8fd3f4 51%, #84fab0 100%); }
