[Update] awards section update - 세분화됬던 수상관련을 큰 카테고리에 따라 통합 - 중요도 순에 따라 배치

--- a/css/theme.css
+++ b/css/theme.css
@@ -290,7 +290,8 @@ table tbody td i:hover {
 
 /* table - awards  */
 #awards img {
-  border-radius: 50%;
+  border-radius: 5%;
+  margin-bottom: 5px;
 }
 td .profile {
   padding-top: 0.5rem;
