[Refactor] header text 색상 오류 수정 및 버튼 제거

--- a/css/theme-dark.css
+++ b/css/theme-dark.css
@@ -3,13 +3,16 @@
     background: rgb(41, 46, 62);
   }
   header {
-    background-image: url(/assets/img/hero-dark.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
   }
 
   .header .container h1 {
+    background: #b2a69d;
+  }
+
+  header .container h1::before {
     background: #b2a69d;
   }
 
