--- a/css/theme.css
+++ b/css/theme.css
@@ -527,6 +527,10 @@ footer {
   background-position: right center;
   color: rgb(255, 255, 255);
 }
+.btn-light:hover {
+  background-position: right center;
+  color: rgb(0, 0, 0);
+}
 .btn-3 {
   background-image: linear-gradient(to right, #84fab0 0%, #8fd3f4 51%, #84fab0 100%);
 }
