--- a/css/theme.css
+++ b/css/theme.css
@@ -20,30 +20,31 @@ body {
 }
 
 /* 헤더 */
-header {
+.typing {
   background-color: #f0dcc7b0;
 }
-header .container {
-  padding: 6rem 4rem;
+.typing .container {
+  padding: 1rem 1rem 1rem 1rem;
 }
 
-header .container h1 {
+.typing .container h1 {
   letter-spacing: -0.05em;
   font-size: 3.25rem;
   font-weight: 100;
-  text-shadow: 0 1px 0 #ccc, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2),
-    0 5px 10px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.2), 0 20px 20px rgba(0, 0, 0, 0.15);
+  text-shadow: 0 1px 0 #ccc, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3),
+    0 3px 5px rgba(0, 0, 0, 0.2), 0 5px 10px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.2),
+    0 20px 20px rgba(0, 0, 0, 0.15);
   color: #ffffff;
   font-size: clamp(1rem, 3vw + 1rem, 4rem);
   font-family: "Source Code Pro", monospace;
   position: relative;
-  width: max-content;
+
   padding-bottom: 0.5rem;
 }
 
 /* 헤더 타이핑 애니메이션 */
-header .container h1::before,
-header .container h1::after {
+.typing .container h1::before,
+.typing .container h1::after {
   content: "";
   position: absolute;
   top: 0;
@@ -52,18 +53,19 @@ header .container h1::after {
   left: 0;
 }
 
-header .container h1::before {
+.typing .container h1::before {
   background: #ede0d1;
   animation: typewriter var(--typewriterSpeed) steps(var(--typewriterCharacters)) 1s forwards;
 }
 
-header .container h1::after {
+.typing .container h1::after {
   width: 0.1em;
   background: gray;
-  animation: typewriter var(--typewriterSpeed) steps(var(--typewriterCharacters)) 1s forwards, steps(var(--typewriterCharacters)) infinite;
+  animation: typewriter var(--typewriterSpeed) steps(var(--typewriterCharacters)) 1s forwards,
+    steps(var(--typewriterCharacters)) infinite;
 }
 
-header .container h2 {
+.typing .container h2 {
   color: hsl(0 0% 0% / 0.7);
   font-size: 2rem;
   font-weight: 400;
@@ -108,7 +110,7 @@ header .container h2 {
   color: #3f416581;
 }
 .navbar-light .navbar-nav .nav-link.active {
-  color: #ff3366c4;
+  color: #f69058;
 }
 .navbar {
   background-color: rgba(164, 164, 164, 0.712);
@@ -136,6 +138,9 @@ header .container h2 {
 .fonsiz-sm {
   font-size: 0.9rem;
 } /*  테이블 상단 구분 크기  */
+.fonsiz-ori {
+  font-size: 1rem;
+} /*  테이블 상단 구분 크기  */
 .fonsiz-md {
   font-size: 0.95rem;
 } /*  테이블 좌측 제목 크기  */
@@ -149,6 +154,9 @@ header .container h2 {
   font-size: 2.5rem;
 } /* 섹션별 제목 크기 */
 
+.text-emphasis {
+  color: #f89058;
+}
 /*  영문 Mukta 폰트  */
 .fonwei-en-md {
   font-weight: 300;
@@ -251,14 +259,14 @@ header .container h2 {
 
 /* padding & margin  */
 .pt {
-  padding-top: 6.25rem;
+  padding-top: 3rem;
 } /* 섹션 구분 100px */
 .px {
   padding-top: 1.063rem;
   padding-bottom: 1.063rem;
 } /* 테이블 상하 여백 17px */
 .mt {
-  margin-top: 3.125rem;
+  margin-top: 2rem;
 } /* 섹션 구분 50px */
 
 /* uppercase */
