[Refactor] 폰트 변경
- Mukta -> noto sans kr

--- a/css/theme.css
+++ b/css/theme.css
@@ -9,7 +9,7 @@ thead,
 tbody,
 ul,
 p {
-  font-family: "Mukta", "Noto Sans KR", sans-serif;
+  font-family: "Noto Sans KR", sans-serif;
   color: #3f4165;
   margin: 0;
   padding: 0;
