--- a/css/theme.css
+++ b/css/theme.css
@@ -75,7 +75,17 @@ body {
   transform: translateY(3rem);
   animation: fadeInUp 2s ease calc(var(--typewriterSpeed) + 2s) forwards;
 }
-
+.fade-class {
+  position: relative;
+  left: 200px;
+  opacity: 0;
+  transition: left 0.5s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.5s linear;
+}
+.fade-in {
+  transition: left 0.5s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.5s linear;
+  left: 0px;
+  opacity: 1;
+}
 @keyframes typewriter {
   to {
     left: 100%;
@@ -102,6 +112,33 @@ body {
   margin: 50px;
   padding: 50px;
   background-color: pink;
+}
+
+.fancy-link {
+  text-decoration: none;
+  color: #3f4165;
+  position: relative;
+  padding-bottom: 2px;
+}
+.fancy-link:hover {
+  color: #f89058;
+}
+.fancy-link::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background: currentColor;
+
+  transform: scaleX(0.1);
+  transform-origin: center;
+  transition: transform 250ms ease-in;
+}
+
+.fancy-link:hover::after {
+  transform: scaleX(1);
 }
 
 /* 네비게이션 바 */
