--- a/css/theme.css
+++ b/css/theme.css
@@ -753,3 +753,46 @@ footer {
     filter: blur(0px);
   }
 }
+
+.logo-circle {
+  position: relative;
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo-round {
+  position: absolute;
+  width: 250px;
+  height: 250px;
+  background: url(/assets/img/myface.jpg);
+  background-size: cover;
+  border-radius: 50%;
+  /* filter: brightness(1.5) contrast(1.5); */
+}
+
+.logo-text {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  animation: rotateText 10s linear infinite;
+}
+
+@keyframes rotateText {
+  0% {
+    transform: rotate(360deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
+.logo-text span {
+  position: absolute;
+  left: 50%;
+  font-size: 1.2em;
+  transform-origin: 0 150px;
+}
