--- a/css/theme.css
+++ b/css/theme.css
@@ -77,7 +77,7 @@ body {
 }
 .fade-class {
   position: relative;
-  bottom: 100px;
+  bottom: 50px;
   opacity: 0;
   transition: bottom 0.5s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.5s linear;
 }
@@ -328,6 +328,10 @@ body {
   padding: 0.24rem 0.4rem;
   text-transform: uppercase;
   margin-bottom: 3px;
+}
+.bg-used {
+  background-color: #f89058;
+  color: black;
 }
 .bg-inprogress {
   background-color: #1b77ff;
